--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
-    <string name="app_name">COC</string>
+    <string name="app_name">COC  S.A.S</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Contraseña</string>
     <string name="btn_login">Iniciar Sesión</string>
     <string name="text_remember_password">¿Olvidaste tu contraseña?</string>
     <string name="text_go_login">Regresar a Iniciar Sesión</string>
-    <string name="edit_text_documento" >Número de documento</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
